Implemented and tested e-mail also using Gmail. Email FE WIP.