@@ -8,8 +8,10 @@ import org.rconfalonieri.nzuardi.shootingapp.model.dto.MailResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.Resource;
 import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.mail.javamail.MimeMessageHelper;
+import org.springframework.security.crypto.codec.Base64;
 import org.springframework.stereotype.Service;
 import org.springframework.ui.freemarker.FreeMarkerTemplateUtils;
 
@@ -17,8 +19,13 @@ import javax.activation.URLDataSource;
 import javax.mail.MessagingException;
 import javax.mail.internet.MimeMessage;
 import java.io.File;
+import java.io.FileOutputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Map;
 
 @Service
@@ -58,9 +65,13 @@ public class EmailService {
             helper.addInline("twitter.png", new ClassPathResource("mail-templates/images/twitter2x.png"));
             helper.addInline("logo-background.png", new ClassPathResource("mail-templates/images/logo-no-background.png"));
 
-//            String qrCode = "iVBORw0KGgoAAAANSUhEUgAAAV4AAAFeAQMAAAD35eVZAAAABlBMVEUAAAD///+l2Z/dAAAAAWJLR0QB/wIt3gAAAeFJREFUaN7t2juSgzAQBNB2ERDqCByFo4mjcRQdgVABRW8wM9hrez8J0m5VK6LgOZqSNGoZ/P3YISwsLCwsLPw38AYbE+tAIq9IFQC5+ocs3B6PJMl12kYeQGbBuN9IrhNJUrgL3gHkdbJS5hWpDke8uQl3xawAuGAivYLC3bHPLxaMJH8qt/C1ONY6DAdIFtjD9wuj8KU4uoJt3G9WOH/4roUQvhSfY4O3asDA5yHcFPtsWpG43wgA8IkGjDsg3AGTO6Jttq4gShnHHOFe2HsAxwe4zLTmjcLtsb8piSR9J7LTDSDcCZO+74wkgflTSnO86QqEL8e+snkUg7xOJA8Ac0l25BRujkke4AIAwwFgvtfV55dwc2yhJeYSuKQKM3H2FG6PfbtJ58pWo5RVuA8+P0WkbMd/LoD1CVm4Od7iquX+cB7/X7sC4SbYUv1lLql6DoBIkuOOTLg13iLV9/mFiSQ9nHnp64Sb4HP4r1gQhXvb1wk3wA85v2E+BP58biGE2+C4EWONoMywV1C4C44L/diJgIH3wP+L23/hJjjCmbOmb3cr4aaY3GHxvudjXsos3AFbvexPYlyAVGH3lYlfbkDC1+KzKwAAZJZUBxKYrWcT7oB/N4SFhYWFhYX/Gf4AT8YBIH5wdHUAAAAASUVORK5CYII=";
-//            byte[] qrCodeBytes = javax.xml.bind.DatatypeConverter.parseBase64Binary(qrCode);
-//            helper.addInline("qr-code.png", qrCodeBytes);
+            String qrCode = "iVBORw0KGgoAAAANSUhEUgAAAV4AAAFeAQMAAAD35eVZAAAABlBMVEUAAAD///+l2Z/dAAAAAWJLR0QB/wIt3gAAAeFJREFUaN7t2juSgzAQBNB2ERDqCByFo4mjcRQdgVABRW8wM9hrez8J0m5VK6LgOZqSNGoZ/P3YISwsLCwsLPw38AYbE+tAIq9IFQC5+ocs3B6PJMl12kYeQGbBuN9IrhNJUrgL3gHkdbJS5hWpDke8uQl3xawAuGAivYLC3bHPLxaMJH8qt/C1ONY6DAdIFtjD9wuj8KU4uoJt3G9WOH/4roUQvhSfY4O3asDA5yHcFPtsWpG43wgA8IkGjDsg3AGTO6Jttq4gShnHHOFe2HsAxwe4zLTmjcLtsb8piSR9J7LTDSDcCZO+74wkgflTSnO86QqEL8e+snkUg7xOJA8Ac0l25BRujkke4AIAwwFgvtfV55dwc2yhJeYSuKQKM3H2FG6PfbtJ58pWo5RVuA8+P0WkbMd/LoD1CVm4Od7iquX+cB7/X7sC4SbYUv1lLql6DoBIkuOOTLg13iLV9/mFiSQ9nHnp64Sb4HP4r1gQhXvb1wk3wA85v2E+BP58biGE2+C4EWONoMywV1C4C44L/diJgIH3wP+L23/hJjjCmbOmb3cr4aaY3GHxvudjXsos3AFbvexPYlyAVGH3lYlfbkDC1+KzKwAAZJZUBxKYrWcT7oB/N4SFhYWFhYX/Gf4AT8YBIH5wdHUAAAAASUVORK5CYII=";
+
+            // Convert Base64 String to File
+            ClassPathResource cpr = new ClassPathResource("mail-templates/images/qr-code.png");
+            Files.write(Paths.get(cpr.getURL().toString().substring(6,cpr.getURL().toString().length()-1)), Base64.decode(qrCode.getBytes()));
+
+            helper.addInline("qr-code.png", new File(cpr.getURL().toString().substring(6,cpr.getURL().toString().length()-1)));
             javaMailSender.send(message);
 
             response.setMessage(ftlFileName + " | Mail sent to : " + to);
